--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,19 @@
-// Mixins Here
+.display-flex() {
+    display:flex;
+    justify-content: center;
+}
+.nodisplay() {
+    display: none;
+}
+
+.button() {
+    width: 30%;
+    padding: 8px 12px;
+    color: @wild-sand;
+    background-color: @btn-bg-color;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 700;
+    border-radius: 5px;
+    cursor: pointer;
+}
