--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,22 @@
-// Navigation code here
+nav {
+    .display-flex();
+    flex-direction: column;
+    background-color: @border-real;
+    width: 100%;
+    .logo {
+        margin: 0 auto;
+        font-size: 4rem;
+        padding: 2%;
+    }
+    .navigation {
+        width: 100%;
+        .display-flex();
+        margin-bottom: 1%;
+        a {
+            text-decoration: none;
+            font-size: 1.6rem;
+            font-weight: 300;
+            padding: 0 1%;
+        }
+    }
+}
