--- a/css/index.css
+++ b/css/index.css
@@ -141,7 +141,8 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+a {
   font-family: 'Russo One', sans-serif;
   color: #23293B;
 }
@@ -160,22 +161,63 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+nav {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #dee2e6;
+  width: 100%;
+}
+nav .logo {
+  margin: 0 auto;
+  font-size: 4rem;
+  padding: 2%;
+}
+nav .navigation {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1%;
+}
+nav .navigation a {
+  text-decoration: none;
+  font-size: 1.6rem;
+  font-weight: 300;
+  padding: 0 1%;
+}
 .home .intro h2 {
   padding: 15px;
 }
 .home .intro p {
   padding: 0 15px;
 }
+.home .intro .img-header {
+  border-radius: 5px;
+  width: 100%;
+}
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -186,6 +228,11 @@ p {
 .home .visit-planets p {
   margin-top: 13px;
 }
+@media (max-width: 500px) {
+  .home .visit-planets {
+    margin-bottom: -8%;
+  }
+}
 .home .walk {
   margin-top: 60px;
   border-top: 1px solid #dee2e6;
@@ -193,8 +240,19 @@ p {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 15px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -202,9 +260,37 @@ p {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  width: 30%;
+  padding: 8px 12px;
+  color: #F6F6F6;
+  background-color: #22283A;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 20px;
+  }
+}
+.home .walk .walk-text .btn:hover {
+  background-color: #F6F6F6;
+  color: #22283A;
+  border: 1px solid #22283A;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 3% 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
